# d3100

./: README.md
hi353x/: Makefile.param
hi353x/detect/: mpi_wrap.cpp  mpi_wrap.h
hi353x/include/: hi_comm_vi.h
hi353x/sample/: Makefile  Makefile.param
hi353x/sample/common/: sample_comm.h  sample_comm_vda.c  sample_comm_vi.c
hi353x/sample/vda/: Makefile  copy_sample_vda.c  sample_vda_od.c  sys_set_config.c
hi353x/sample/vio/: sample_vio.c  x1.c
main/: .gitignore  Makefile.am  README  configure.ac  teacher_detect_trace.config  teacher_detect_trace.config.session
main/libkvconfig/: README  kvconfig.cpp  kvconfig.h
main/libkvconfig/test/: teacher_detect_trace.config  test_kvc.cpp
main/libopencv_teacher_detect/: KVConfig.cpp  KVConfig.h  blackboard_detect.cpp  blackboard_detect.h  detect.cpp  detect.h  detect_opencv.cpp  detect_opencv_vt.cpp  detect_t.cpp  detect_t.h  hi_mat.cpp  hi_mat.h  opencv_detect.cpp  opencv_detect.h  readme.txt  teacher_detect_trace.config  utils.h  vi_src.cpp  vi_src.h
main/libopencv_teacher_detect/common/: sample_comm_vi.c
main/libopencv_teacher_detect/test/: test_arm_opencv_detect.cpp  test_himat.cpp  test_visrc.cpp
main/libptz/: README  polyfit.cpp  polyfit.h  ptz.c  ptz.cpp  ptz.h  tcp_util.cpp  tcp_util.h
main/libptz/ptzsrv/: ptzsrv.cpp
main/libptz/test/: test_ptz.cpp
main/libteacher_detect/: README  detect.cpp  detect.h  detect_dummy.cpp
main/libteacher_detect/test/: test_detect_dummy.cpp
main/libtt/: tt.h
main/teacher_track/: README  detector.cpp  detector.h  evt.h  fsm.cpp  fsm.h  log.cpp  log.h  policy.cpp  policy.h  reg.cpp  reg.h  runtime.cpp  runtime.h  switch.cpp  switch.h  teacher_track.c  teacher_track.cpp  udpsrv.cpp  udpsrv.h  utils.h
main/teacher_track/policy/: p1.cpp  p1.h  p2.cpp  p2.h  p3.cpp  p3.h
main/teacher_track/test/: test_fsm.cpp  test_udpsrv.cpp
main/vd/: vd.cpp  vd.h
main/vt/: vt.cpp  vt.h
main/vt/test/: testvt.cpp
main/win32/hi3531_track/: hi3531_track.sln
main/win32/hi3531_track/teacher_track/: teacher_track.vcxproj  teacher_track.vcxproj.filters
